@@ -760,3 +760,4 @@
 2012-12-05  Cedric Bail
 
 	* Fix uninitialized data path in elm_flip.
+	* Fix uninitialized data path in elm_gesture_layer.
